--- a/web3modal/frontend/package.json
+++ b/web3modal/frontend/package.json
@@ -1,36 +1,62 @@
 {
-  "name": "st-web3modal",
+  "name": "react-genft-button",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
-    "@thirdweb-dev/react": "^4.3.2",
-    "@thirdweb-dev/sdk": "^4.0.7",
-    "@vercel/postgres": "^0.5.1",
-    "brew": "^0.0.8",
-    "ethers": "^5.7.2",
-    "express": "^4.18.2",
-    "next": "^13.5.6",
-    "next-transpile-modules": "^10.0.1",
-    "pg": "^8.11.3",
-    "pg-promise": "^11.5.4",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^14.2.0",
+    "@thirdweb-dev/react": "^4",
+    "@thirdweb-dev/sdk": "^4",
+    "assert": "^2.0.0",
+    "browserify-zlib": "latest",
+    "css-modules": "^0.3.0",
+    "ethers": "^5",
+    "http": "npm:http-browserify",
+    "http-browserify": "latest",
+    "https": "npm:https-browserify",
+    "https-browserify": "latest",
     "react": "^18.2",
     "react-dom": "^18.2",
+    "react-scripts": "^5.0.1",
+    "stream": "^0.0.2",
     "streamlit-component-lib": "^2.0.0",
-    "uuid": "^9.0.1",
-    "webpack-merge": "^5.10.0"
+    "style-loader": "^3.3.4",
+    "typescript": "^4.7.2",
+    "url": "latest",
+    "web-vitals": "^2.1.4",
+    "zlib": "npm:browserify-zlib"
   },
   "devDependencies": {
-    "@types/node": "^17.0.45",
-    "@types/react-typist": "^2.0.6",
-    "eslint": "^8.32.0",
-    "eslint-config-next": "^13",
-    "ignore-loader": "^0.1.2",
-    "typescript": "^4.9.4"
+    "@types/jest": "^27.5.1",
+    "@types/node": "^17.0.35",
+    "@types/react": "^18",
+    "@types/react-dom": "^18"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "deploy": "yarn build && npx thirdweb@latest upload build"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
